--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -192,7 +192,7 @@ register_form_subheading: "Afin de suivre la progression de votre demande"
 login_question: "Vous êtes membre ?"
 login_link_text: "Je me connecte"
 login_redirect_text: "Connectez-vous en suivant ce lien"
-register_image_alt: "Inscription ScriptZenIT"
+register_image_alt: "Inscription Walid BELBECHE"
 
 form_civility_label: "Civilité"
 form_nom_label: "Nom"
@@ -275,4 +275,33 @@ callback_request:
         label: "Adresse email"
         placeholder: "Entrez votre adresse email"
 
-site_name: "Walid B."
+site_name: "</Walid BELBECHE>"
+
+recent_projects_title: "Projets Récents"
+
+site_description: "Portfolio de Walid BELBECHE - Expert Symfony & Solutions Numériques"
+keywords_site: "Walid BELBECHE, expert Symfony, solutions numériques, développement web, optimisation des performances, création de sites web, applications sur mesure, automatisation de tâches, génération de devis"
+
+site_title: "Portfolio de Walid BELBECHE - Expert Symfony & Solutions Numériques"
+
+email_subject: "Demande de rappel - Confirmation"
+email_header: "Confirmation de la demande de rappel"
+callback_request_email_intro: "Voici un récapitulatif de votre demande sur la plateforme %platform%."
+contact_email_subject: "Soumission du formulaire de contact - Walid BELBECHE"
+contact_email_header: "Demande de contact reçue"
+email_label_first_name: "Prénom"
+email_label_last_name: "Nom"
+email_label_email: "Email"
+email_label_phone: "Téléphone"
+email_label_service: "Service"
+email_label_message: "Message"
+email_footer_company: "Walid BELBECHE"
+email_footer_tagline: "Simplifiez votre transformation numérique"
+flash.success.callback_request: "Votre demande a été enregistrée avec succès. Je vous rappel bientôt."
+flash.error.input_invalid: "Une erreur est survenue. Veuillez vérifier les informations saisies."
+callback_request_email_header: "Demande de rappel"
+contact_email_intro: "J'ai bien reçu votre message. Voici les détails de votre demande :"
+contact_email_details: "Veuillez trouver ci-dessous les informations que vous avez transmises :"
+email_team_contact_message: "J'examinerai votre message et reviendrai vers vous dans les plus brefs délais."
+email_footer_disclaimer: "Vous recevez cet e-mail parce que vous avez soumis une demande de contact sur ma plateforme. Si ce n'était pas vous, veuillez me contacter immédiatement."
+contact_form_success_message: "Votre message a été envoyé avec succès. Je vous répondrais dans les plus brefs délais."
